style.css
/* ... */
@font-face {
    font-family: 'MaitreeLight';
    src: url('./fonts/Maitree-Light.eot');
    src: url('./fonts/Maitree-Light.eot?#iefix') format('embedded-opentype'),
         url('./fonts/Maitree-Light.woff2') format('woff2'),
         url('./fonts/Maitree-Light.woff') format('woff'),
         url('./fonts/Maitree-Light.ttf') format('truetype');
}

@font-face {
    font-family: 'MaitreeRegular';
    src: url('./fonts/Maitree-Regular.eot');
    src: url('./fonts/Maitree-Regular.eot?#iefix') format('embedded-opentype'),
         url('./fonts/Maitree-Regular.woff2') format('woff2'),
         url('./fonts/Maitree-Regular.woff') format('woff'),
         url('./fonts/Maitree-Regular.ttf') format('truetype');
}

@font-face {
    font-family: 'MaitreeMedium';
    src: url('./fonts/Maitree-Medium.eot');
    src: url('./fonts/Maitree-Medium.eot?#iefix') format('embedded-opentype'),
         url('./fonts/Maitree-Medium.woff2') format('woff2'),
         url('./fonts/Maitree-Medium.woff') format('woff'),
         url('./fonts/Maitree-Medium.ttf') format('truetype');
}

@font-face {
    font-family: 'MaitreeSemiBold';
    src: url('./fonts/Maitree-Semibold.eot');
    src: url('./fonts/Maitree-Semibold.eot?#iefix') format('embedded-opentype'),
         url('./fonts/Maitree-Semibold.woff2') format('woff2'),
         url('./fonts/Maitree-Semibold.woff') format('woff'),
         url('./fonts/Maitree-Semibold.ttf') format('truetype');
}

@font-face {
    font-family: 'MaitreeBold';
    src: url('./fonts/Maitree-Bold.eot');
    src: url('./fonts/Maitree-Bold.eot?#iefix') format('embedded-opentype'),
         url('./fonts/Maitree-Bold.woff2') format('woff2'),
         url('./fonts/Maitree-Bold.woff') format('woff'),
         url('./fonts/Maitree-Bold.ttf') format('truetype');
}

#block-1 {
  color: #FFF;
  background-color: #FF0058;
  height: 720px;
}

#block-1-header {
  font-family: 'MaitreeLight';
  font-size: 25pt;
  line-height: 200%;
  text-align: center;
  padding-top: 250px;
}

#name {
  font-family: 'MaitreeMedium';
  font-size: 90pt;
}

#block-2 {
  color: #FF0058;
  background-color: #FFF;
  font-family: 'MaitreeRegular';
  font-size: 50pt;
  line-height: 120%;
  text-align: left;
  padding-top: 100px;
  padding-bottom: 100px;
}

#block-3 {
  height: 720px;
  background: url("img/block03.png") no-repeat center;
  color: #333333;
  background-color: #FF0058;
}

#block-3-text {
  font-family: 'MaitreeRegular';
  font-size: 12pt;
  line-height: 140%;
  text-align: right;
  padding-top: 380px;
}

#block-4 {
  height: 720px;
  background: url("img/block04.png") no-repeat center;
  color: #FF0058;
  background-color: #333333;
}

#block-4-text {
  font-family: 'MaitreeMedium';
  font-size: 20pt;
  line-height: 120%;
  text-align: right;
  padding-top: 380px;
}

#block-5 {
  color: #FF0058;
  background-color: #FFF;
  padding-top: 100px;
  padding-bottom: 120px;
}

#block-5-Title {
  font-family: 'MaitreeRegular';
  font-size: 16pt;
  text-align: left;
  letter-spacing: 0px;
}

#block-5-text1 {
  font-family: 'MaitreeExtraLight';
  font-size: 110pt;
  line-height: 100%;
  text-align: left;
  padding-top: 50px;
}

#block-5-text1_2 {
  font-family: 'MaitreeLight';
  font-size: 12pt;
  line-height: 100%;
  text-align: left;
  padding-top: 20px;
}

#block-5-text2 {
  font-family: 'MaitreeLight';
  font-size: 110pt;
  line-height: 100%;
  text-align: left;
  padding-top: 55px;
}

#block-5-text2_2 {
  font-family: 'MaitreeLight';
  font-size: 12pt;
  line-height: 100%;
  text-align: left;
  padding-top: 20px;
}

#block-5-text3 {
  font-family: 'MaitreeRegular';
  font-size: 110pt;
  line-height: 100%;
  text-align: left;
  padding-top: 60px;
}

#block-5-text3_2 {
  font-family: 'MaitreeLight';
  font-size: 12pt;
  line-height: 100%;
  text-align: left;
  padding-top: 20px;
}

#block-5-text4 {
  font-family: 'MaitreeMedium';
  font-size: 110pt;
  line-height: 100%;
  text-align: left;
  padding-top: 65px;
}

#block-5-text4_2 {
  font-family: 'MaitreeLight';
  font-size: 12pt;
  line-height: 100%;
  text-align: left;
  padding-top: 20px;
}

#block-5-text5 {
  font-family: 'MaitreeSemiBold';
  font-size: 110pt;
  line-height: 100%;
  font-weight: 600;
  text-align: left;
  padding-top: 70px;
}

#block-5-text5_2 {
  font-family: 'MaitreeLight';
  font-size: 12pt;
  line-height: 100%;
  text-align: left;
  padding-top: 20px;
}

#block-5-text6 {
  font-family: 'MaitreeBold';
  font-size: 110pt;
  line-height: 100%;
  text-align: left;
  padding-top: 80px;
}

#block-5-text6_2 {
  font-family: 'MaitreeLight';
  font-size: 12pt;
  line-height: 100%;
  text-align: left;
  padding-top: 20px;
}

#block-6 {
  height: 720px;
  background: url("img/block06.png") no-repeat center;
  color: #333333;
  background-color: #FF0058;
}

#block-7 {
  background: url("img/block07.png") no-repeat center;
  background-size: cover;
  height: 720px;
  color: #FFF;
  background-color: #333333;
}

#block-7-text {
  font-family: 'MaitreeLight';
  font-size: 16pt;
  line-height: 150%;
  text-align: left;
  padding-top: 200px;
}

#block-8 {
  background: url("img/block08.png") no-repeat center;
  background-size: cover;
  height: 720px;
  color: #FFF;
  background-color: #333333;
}

#block-8-text {
  font-family: 'MaitreeBold';
  font-size: 18pt;
  line-height: 150%;
  text-align: left;
  padding-top: 430px;
}

#block-9 {
  color: #FF0058;
  background-color: #FFF;
  padding-top: 80px;
  padding-bottom: 50px;
}

#block-9-Title {
  font-family: 'MaitreeLight';
  font-size: 10pt;
  text-align: left;
  letter-spacing: 0px;
}

#block-9-Char {
  font-family: 'MaitreeExtraLight';
  font-size: 22pt;
  line-height: 120%;
  text-align: left;
  letter-spacing: 3px;
  padding-bottom: 15px;
}

#block-9-Num {
  font-family: 'MaitreeExtraLight';
  font-size: 22pt;
  text-align: left;
  line-height: 120%;
  letter-spacing: 3px;
  padding-bottom: 15px;
}
/* ... */

